chore: fix spacing issues and logo themes (#323)
* fix spacing issues for hero and image dark mode

* remove layout class

--- a/src/components/Media/Image/index.module.scss
+++ b/src/components/Media/Image/index.module.scss
@@ -1,3 +1,5 @@
+@use '@scss/common.scss' as *;
+
 .placeholder {
   background-color: var(--theme-elevation-50);
 }
@@ -11,5 +13,12 @@
 [data-theme=light] {
   .themeDark {
     display: none;
+  }
+}
+
+// Specific rule to handle the home hero exception, to be reviewed if it's a problem with other blocks
+[data-theme='light'] [data-theme='dark'] {
+  .hasDarkModeFallback.themeDark {
+    display: block;
   }
 }
